# freva-gpt-backend

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  compose.sh  docker-compose.yml  example.ipynb  litellm_config.yaml  podman-build.sh  start_ollama.sh  stop_backend.sh  testing.ipynb  testing_suite.ipynb  testthread.txt
.github/workflows/: build.yml
dockerfiles/chatbot-backend/: Dockerfile  requirements.txt
dockerfiles/code-interpreter-server/: Dockerfile
dockerfiles/rag-server/: Dockerfile
logs/: .gitignore
python_pickles/: .gitignore
resources/stableclimgen/: documentation.txt
src/: auth.rs  cla_parser.rs  logging.rs  main.rs  runtime_checks.rs  static_serve.rs
src/chatbot/: available_chatbots.rs  available_chatbots_endpoint.rs  filter_variants.rs  get_thread.rs  get_user_threads.rs  handle_active_conversations.rs  heartbeat.rs  mod.rs  mongodb_storage.rs  prompting.rs  stop.rs  storage_router.rs  stream_response.rs  thread_storage.rs  topic_extraction.rs  types.rs
src/chatbot/mongodb/: get_user_threads.rs  mod.rs  mongodb_storage.rs  search_threads.rs  set_thread_topic.rs
src/chatbot/prompt_sources/: examples.jsonl  starting_prompt.txt  summary_prompt.txt
src/chatbot/prompt_sources_gpt_5/: examples.jsonl  starting_prompt.txt
src/tool_calls/: mod.rs  route_call.rs  tool_calls.py
src/tool_calls/code_interpreter/: execute.rs  helpers.py  mod.rs  parse_input.rs  prepare_execution.rs  safety_check.rs  server.py
src/tool_calls/mcp/: client.rs  execute.rs  hostname.py  mod.rs  parse_rag.rs
src/tool_calls/rag/: __init__.py  document_loaders.py  header_gate.py  helpers.py  rag_server.py  server.py
test/: debug-python.sh  launch-mongo.sh  run_pytest.sh  test_suite.py
test/deprecated/: testing.ipynb  testing_suite.ipynb
testdata/: .gitignore
threads/: .gitignore  test.txt
