[package]
name = "freva-gpt2-backend"
version = "0.5.2"
edition = "2021"
authors = ["Sebastian Willmann"]
repository = "https://gitlab.dkrz.de/k203176/freva-gpt2-backend"
description = "The backend for the second version of the freva-GPT project; a Rest API."
readme = "README.md"
license = "CC-BY-4.0"
keywords = ["LLM","Freva","API"]
categories = ["science", "science::geo", "web-programming::http-server"]

[dependencies]
actix-web = "4.8.0"
async-openai = "0.23.4"
clap = {version = "4.5.11", features = ["derive", "cargo"]}
const_format = "0.2.32"
dotenvy = "0.15.7"
futures = "0.3.30"
once_cell = "1.19.0"
qstring = "0.7.2"
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
