[package]
name = "freva-gpt2-backend"
version = "1.7.1"
edition = "2021"
authors = ["Sebastian Willmann"]
repository = "https://gitlab.dkrz.de/k203176/freva-gpt2-backend"
description = "The backend for the second version of the freva-GPT project; a Rest API."
readme = "README.md"
license = "CC-BY-4.0"
keywords = ["LLM", "Freva", "API"]
categories = ["science", "science::geo", "web-programming::http-server"]

[dependencies]
actix-web = "4.9.0"
async-openai = "0.24.1"
base64 = "0.22.1"
clap = { version = "4.5.18", features = ["derive", "cargo"] }
const_format = "0.2.33"
documented = { version = "0.6.0" }
dotenvy = "0.15.7"
flexi_logger = { version = "0.29.0", features = ["trc"] }
futures = "0.3.30"
once_cell = "1.20.1"
pyo3 = { version = "0.22.3", features = ["auto-initialize"] }
qstring = "0.7.2"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.8", features = [
    "blocking",
], default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"   # Always use expect instead
enum_glob_use = "deny" # Bad form
# nursery = {level = "warn", priority = -1} # General "undertested" lints, but many false positives
# pedantic = {level = "warn", priority = -1}  # Only activate these two when preparing for major versions.
