[package]
name = "freva-gpt2-backend"
version = "1.8.13"
edition = "2021"
authors = ["Sebastian Willmann"]
repository = "https://gitlab.dkrz.de/k203176/freva-gpt2-backend"
description = "The backend for the second version of the freva-GPT project; a Rest API."
readme = "README.md"
license = "CC-BY-4.0"
keywords = ["LLM", "Freva", "API"]
categories = ["science", "science::geo", "web-programming::http-server"]

[dependencies]
actix-web = "4.9.0"
async-openai = {git = "https://github.com/SeseMueller/async-openai", version = "0.27.2"}
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
const_format = "0.2.33"
documented = { version = "0.7.1" }
dotenvy = "0.15.7"
flexi_logger = { version = "0.29.3", features = ["trc"] }
futures = "0.3.31"
once_cell = "1.20.2"
pyo3 = { version = "0.22.5", features = ["auto-initialize"] }
qstring = "0.7.2"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.8", features = [
    "blocking",
], default-features = false }
tokio = { version = "1.41.0", features = ["time"] }
sysinfo = "0.32.0"
fs2 = "0.4.3"
async-process = "2.3.0"
itertools = "0.13.0"
mongodb = {version = "3.2.2"}
chrono = { version = "0.4.40", default-features = false}
async-lazy = "0.1.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"   # Always use expect instead
enum_glob_use = "deny" # Bad form
# nursery = {level = "warn", priority = -1} # General "undertested" lints, but many false positives
# pedantic = {level = "warn", priority = -1}  # Only activate these two when preparing for major versions.
